# Microsoft-AI-School

./: .env.example  .gitignore  README.md  mise.toml  pyproject.toml
2025.04.09/: README.md  basic.html  test.ipynb  test.py
2025.04.10/: README.md  practice_01.ipynb
2025.04.11/: README.md  practice_01.ipynb
2025.04.14/: README.md  calculator.py  my_module.py  practice_01.ipynb
2025.04.16/: 1_달탐사_미션.ipynb  README.md
2025.04.17/: 2_유성우_미션.ipynb  README.md
2025.04.18/: README.md
2025.04.18/data/: bike_shop.csv  seoul.json
2025.04.30/: README.md
2025.04.30/LearningLab/: requirements.txt
2025.05.08/: README.md  links.txt
2025.05.08/ch2/: 2-1.py  2-2.py  2-3.py  2-4.py  2-5.py  2-6.py  2-7.py  2-8.py  2-9.py
2025.05.08/ch3/: 3-1.py  3-2.py  3-3.py  3-4.py  3-5.py  3-6.py  3-7.py  3-8.py  3-9.py
2025.05.08/ch4/: 4-1.py  4-2.py  4-3.py  4-4.py  4-5.py  4-7.py
2025.05.15/: README.md
2025.05.15/models/: ad_lr_model.pkl  ad_lr_scaler.pkl  ad_pipe.pkl
2025.05.15/notebooks/: 01_회귀_광고플랫폼에따른판매량예측1_단순선형회귀.ipynb  01_회귀_광고플랫폼에따른판매량예측1_단순선형회귀_완성.ipynb  01_회귀_광고플랫폼에따른판매량예측2_다중회귀.ipynb  01_회귀_광고플랫폼에따른판매량예측2_다중회귀_완성.ipynb  01_회귀_광고플랫폼에따른판매량예측3_다항회귀와 규제.ipynb  01_회귀_광고플랫폼에따른판매량예측3_다항회귀와 규제_완성.ipynb  (+9 more)
2025.05.16/: README.md
2025.05.19/: 03_워드클라우드시각화.ipynb  05_군집화_k-means.ipynb  05_군집화_k-means_완성.ipynb  06_군집화_프로야구.ipynb  06_군집화_프로야구_완성.ipynb  README.md  silhouette_analysis.py
2025.05.20/: README.md
2025.05.21/: README.md
2025.05.27/: README.md  requirements.txt
2025.05.28/: GradioTest.ipynb  GradioTest2.ipynb  GradioTest3.ipynb  README.md  moonrock_identification_master.ipynb  object_detection_master.ipynb
2025.06.18/: README.md
2025.06.19/: README.md
2025.06.23/: README.md  openai.ipynb  openai_add.ipynb  openai_rag.ipynb  openai_references.ipynb  openai_tts.ipynb  openai_whisper.ipynb
2025.06.24/: README.md  main.py
2025.06.25/: README.md  document_intelligence.http  document_intelligence.py
2025.06.26/: README.md  language.http  main.py
2025.06.27/: README.md  custom_ner.http  custom_ner.py  speech.http  speech.py
2025.06.30/: README.md  main.py  spx
2025.07.01/: README.md  speech.ipynb
2025.07.02/: README.md  main.py  vision.http
2025.07.03/: README.md  vision_20250703.ipynb  vision_20250703_2.ipynb
2025.07.04/: README.md  customvision_20250704.ipynb
2025.07.07/: README.md  opencv_20250707.ipynb  yolo3_20250707.ipynb
2025.07.08/: README.md  yolo3_20250708.ipynb  yolo8_20250708.ipynb
2025.07.09/: 1-1_index.html  1-2_semantic-layout.html  1-3_table.html  1-4_register.html  README.md
2025.07.10/: 1-1_index.html  1-2_semantic-layout.html  1-3_table.html  1-4_register.html  README.md  style.css
2025.07.11/: README.md  javascript_basic.html  javascript_basic.js  javascript_core_concepts.html  javascript_core_concepts.js  javascript_variables.html  javascript_variables.js
2025.07.14/: README.md  javascript_async_await.html  javascript_async_await.js  javascript_callback.html  javascript_callback.js  javascript_closure.html  javascript_closure.js  javascript_cookie.html  javascript_cookie.js  javascript_currying.html  javascript_currying.js  javascript_dom_manipulation.html  javascript_dom_manipulation.js  javascript_event_loop.html  javascript_event_loop.js  javascript_fetch.html  javascript_fetch.js  javascript_indexeddb.html  javascript_indexeddb.js  javascript_local_storage.html  javascript_local_storage.js  javascript_long_polling.html  javascript_long_polling.js  javascript_promise.html  javascript_promise.js  javascript_session_storage.html  javascript_session_storage.js  javascript_sse.html  javascript_sse.js  javascript_websocket.html  javascript_websocket.js  javascript_xhr.html  javascript_xhr.js
2025.07.15/: README.md  javascript_destructuring.html  javascript_destructuring.js  javascript_spread_and_rest.html  javascript_spread_and_rest.js
(+261 files in other folders)
