[project]
name = "microsoft-ai-school"
version = "0.1.0"
description = "2025 Microsoft AI School - 학습 기록 저장소"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "azure-cognitiveservices-vision-customvision==3.1.1",
    "azure-common==1.1.28",
    "azure-core==1.34.0",
    "azure-mgmt-core==1.5.0",
    "branca==0.8.1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "duckduckgo-search==8.0.4",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "fastapi==0.115.12",
    "ffmpy==0.5.0",
    "filelock==3.18.0",
    "folium==0.19.6",
    "fonttools==4.57.0",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "gradio==5.31.0",
    "gradio-client==1.10.1",
    "groovy==0.1.2",
    "h11==0.16.0",
    "hf-xet==1.1.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.2",
    "idna==3.10",
    "imageio==2.37.0",
    "imbalanced-learn==0.13.0",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "isodate==0.7.2",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.0",
    "jpype1==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "konlpy==0.6.0",
    "lazy-loader==0.4",
    "lxml==5.4.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "missingno==0.5.2",
    "mpmath==1.3.0",
    "msrest==0.7.1",
    "multidict==6.5.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "oauthlib==3.2.2",
    "openai==1.88.0",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "orjson==3.10.18",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "primp==0.15.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydoll-python==2.2.3",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==14.0.0",
    "ruff==0.11.11",
    "safehttpx==0.1.6",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "selenium==4.32.0",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sklearn-compat==0.1.3",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tifffile==2025.3.30",
    "tomlkit==0.13.2",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typer==0.16.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "wcwidth==0.2.13",
    "websocket-client==1.8.0",
    "websockets==13.1",
    "wordcloud==1.9.4",
    "wsproto==1.2.0",
    "xyzservices==2025.4.0",
    "yarl==1.20.1",
]
